force-app/main/default/objects/Installation_Address__c/Installation_Address__c.object-meta.xml
<CustomObject>
    <description>Installation address for Wholesale orders</description>
    <label>Installation Address</label>
    <nameField>
        <displayFormat>IA-{00000000}</displayFormat>
        <label>Installation Address No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installation Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>