force-app/main/default/objects/Installation_Address__c/fields/Circuit_Number__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Number__c</fullName>
    <label>Circuit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>