force-app/main/default/objects/Installation_Address__c/fields/Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Installation_Address__c/&quot;&amp;Id&amp;&quot;/view&quot;,
IF(ISBLANK(Secondary_Street__c), 
    IF(ISBLANK(Primary_Street__c), Name ,Primary_Street__c &amp; &quot; &quot; &amp;  Primary_Street_Number__c ),
     Primary_Street__c &amp;&quot; to &quot;&amp; Secondary_Street__c),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Address</label>
    <type>Text</type>
</CustomField>