force-app/main/default/objects/Installation_Address__c/fields/Installation_Address_Info__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_Info__c</fullName>
    <formula>Name + &apos;, &apos; + &apos;Primary Address: &apos; + Primary_Street__c + &apos; &apos; +  Primary_Street_Number__c + &apos;, &apos; +  Primary_City__c + 
&apos; Secondary Address: &apos; + Secondary_Street__c + &apos; &apos; +  Secondary_Street_Number__c + &apos;, &apos; +  Secondary_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Address Info</label>
    <type>Text</type>
</CustomField>