force-app/main/default/objects/Installation_Address__c/fields/Old_Installation_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Installation_Address_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Old Installation Address ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>