force-app/main/default/objects/Installation_Address__c/fields/Old_Order_ID_from_Order__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_ID_from_Order__c</fullName>
    <formula>Order__r.Old_Order_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Order ID from Order</label>
    <type>Text</type>
</CustomField>