force-app/main/default/objects/Installation_Address__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Wholesale_Order__c</referenceTo>
    <relationshipLabel>Installation Addresses</relationshipLabel>
    <relationshipName>Installation_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>