force-app/main/default/objects/Installation_Address__c/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <description>The city of the primary address</description>
    <label>Primary City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>