force-app/main/default/objects/Installation_Address__c/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <description>The country of the Primary address</description>
    <label>Primary Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>