force-app/main/default/objects/Installation_Address__c/fields/Primary_Floor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Floor__c</fullName>
    <description>The floor number of the Primary address</description>
    <label>Primary Floor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>