force-app/main/default/objects/Installation_Address__c/fields/Primary_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Postal_Code__c</fullName>
    <description>The postal code of the Primary address</description>
    <label>Primary Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>