force-app/main/default/objects/Installation_Address__c/fields/Primary_Side__c.field-meta.xml
<CustomField>
    <fullName>Primary_Side__c</fullName>
    <description>The side of the Primary address</description>
    <label>Primary Side</label>
    <length>100</length>
    <type>Text</type>
</CustomField>