force-app/main/default/objects/Installation_Address__c/fields/Primary_Stairway__c.field-meta.xml
<CustomField>
    <fullName>Primary_Stairway__c</fullName>
    <description>The stairway of the Primary address</description>
    <label>Primary Stairway</label>
    <length>100</length>
    <type>Text</type>
</CustomField>