force-app/main/default/objects/Installation_Address__c/fields/Primary_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street__c</fullName>
    <description>The street name of the Primary address</description>
    <label>Primary Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>