force-app/main/default/objects/Installation_Address__c/fields/Primary_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Street_Number__c</fullName>
    <description>The street number of the Primary address</description>
    <label>Primary Street Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>