force-app/main/default/objects/Installation_Address__c/fields/Secondary_City__c.field-meta.xml
<CustomField>
    <fullName>Secondary_City__c</fullName>
    <description>The city of the Secondary address</description>
    <label>Secondary City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>