force-app/main/default/objects/Installation_Address__c/fields/Secondary_Country__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Country__c</fullName>
    <description>The country of the Secondary address</description>
    <label>Secondary Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>