force-app/main/default/objects/Installation_Address__c/fields/Secondary_Floor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Floor__c</fullName>
    <description>The floor number of the Secondary address</description>
    <label>Secondary Floor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>