force-app/main/default/objects/Installation_Address__c/fields/Secondary_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Postal_Code__c</fullName>
    <description>The postal code of the Secondary address</description>
    <label>Secondary Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>