force-app/main/default/objects/Installation_Address__c/fields/Secondary_Side__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Side__c</fullName>
    <description>The side of the Secondary address</description>
    <label>Secondary Side</label>
    <length>100</length>
    <type>Text</type>
</CustomField>