force-app/main/default/objects/Installation_Address__c/fields/Secondary_Stairway__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Stairway__c</fullName>
    <description>The stairway of the Secondary address</description>
    <label>Secondary Stairway</label>
    <length>100</length>
    <type>Text</type>
</CustomField>