force-app/main/default/objects/Installation_Address__c/fields/Secondary_Street__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Street__c</fullName>
    <description>The street of the Secondary address</description>
    <label>Secondary Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>