force-app/main/default/objects/Installation_Address__c/fields/Secondary_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Street_Number__c</fullName>
    <description>The street number of the Secondary address</description>
    <label>Secondary Street Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>