force-app/main/default/objects/Installation_Address__c/fields/Total_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Charge__c</fullName>
    <label>Total Monthly Charge</label>
    <summarizedField>Wholesale_Order_Product__c.Total_Monthly_Charge__c</summarizedField>
    <summaryForeignKey>Wholesale_Order_Product__c.Installation_Address__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>