force-app/main/default/objects/Installation_Address__c/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <label>Total_One_Time_Charge</label>
    <summarizedField>Wholesale_Order_Product__c.Total_One_Time_Charge__c</summarizedField>
    <summaryFilterItems>
        <field>Wholesale_Order_Product__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Wholesale_Order_Product__c.Installation_Address__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>