force-app/main/default/objects/Installation_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Primary_Street__c</columns>
    <columns>Primary_Street_Number__c</columns>
    <columns>Primary_City__c</columns>
    <columns>Secondary_Street__c</columns>
    <columns>Secondary_Street_Number__c</columns>
    <columns>Secondary_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>